manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsu-svc
  namespace: devsu
  labels:
    app: devsu
spec:
  selector:
    app: devsu
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
